--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/gosia1.png" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/profile1.png" alt="">
         <h1 class="text-uppercase mb-0">Małgorzata Nelson</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Junior Java Developer</h2>
@@ -78,7 +78,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="img/portfolio/metarLogo.jpg" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -145,10 +145,16 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">Java8, JavaFX, Maven</p>
+              <p class="lead">HTML5, CSS, Bootstrap</p>
+              <p class="lead">Podstawy JavaScript, JQuery</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">SQL</p>
+            <p class="lead">Git</p>
+            <p class="lead">Python3</p>
+
+
           </div>
         </div>
         <div class="text-center mt-4">
@@ -253,10 +259,10 @@
         <hr class="star-dark mb-5">
           <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">Jestem studentką medycyny laboratoryjnej. Mieszkam w Łodzi. Obecnie piszę pracę magisterską w dziedzinie genetyki. Programowania uczę się sama oraz na kursie w Reaktorze PWN w Warszawie.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">Oprócz medycyny i kodowania, interesuje mnie także lotnictwo. Jestem pilotem szybowcowym i uczniem pilotem samolotowym. Lubię też wędrować po górach i dalekich krajach.</p>
           </div>
         </div>
         <div class="text-center mt-4">
@@ -315,10 +321,11 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Metar Decoder</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <img class="img-fluid mb-5" src="img/portfolio/metar.png" alt="">
+              <p class="mb-5">Aplikacja łączy się ze stroną aviationweather.gov i pobiera najnowszy METAR. Jest to zakodowana informacja o warunkach atmosferycznych panujących w okolicy 5000 lotnisk na całym świecie. Użytkownik wybiera lotnisko, którego METAR chce odczytać, a program wyświetla zaszyfrowaną wiadomość. Naciskając przycisk <i>Decode</i>, można przetłumaczyć METAR na zrozumiały tekst.</p>
+                <p class="mb-5">Do napisania programu użyłam języka Java i biblioteki Swing.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
