--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/profileApple.png" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/gosiaBgAppleLittle.png" alt="">
         <h1 class="text-uppercase mb-0">Małgorzata Nelson</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Junior Java Developer</h2>
