--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/comingSoon.png" alt="">
+              <img class="img-fluid" src="img/portfolio/iCardsProLogo.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -101,6 +101,7 @@
               <img class="img-fluid" src="img/portfolio/comingSoon.png" alt="">
             </a>
           </div>
+            <!--
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -131,6 +132,8 @@
               <img class="img-fluid" src="img/portfolio/comingSoon.png" alt="">
             </a>
           </div>
+
+-->
         </div>
       </div>
     </section>
@@ -145,24 +148,28 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Java8, JavaFX, Maven</p>
+            <p class="lead">Java, Spring</p>
+            <p class="lead">Maven, Hibernate</p>
               <p class="lead">HTML5, CSS, Bootstrap</p>
-              <p class="lead">Podstawy JavaScript, JQuery</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead">SQL</p>
             <p class="lead">Git</p>
-            <p class="lead">Python3</p>
+            <p class="lead">Python3 - podstawy</p>
 
 
           </div>
         </div>
+          
+          <!--
         <div class="text-center mt-4">
           <a class="btn btn-xl btn-outline-light" href="#">
             <i class="fa fa-download mr-2"></i>
             Download Now!
           </a>
         </div>
+
+-->
       </div>
     </section>
 
@@ -326,9 +333,10 @@
               <img class="img-fluid mb-5" src="img/portfolio/metar.png" alt="">
               <p class="mb-5">Aplikacja łączy się ze stroną aviationweather.gov i pobiera najnowszy METAR. Jest to zakodowana informacja o warunkach atmosferycznych panujących w okolicy 5000 lotnisk na całym świecie. Użytkownik wybiera lotnisko, którego METAR chce odczytać, a program wyświetla zaszyfrowaną wiadomość. Naciskając przycisk <i>Decode</i>, można przetłumaczyć METAR na zrozumiały tekst.</p>
                 <p class="mb-5">Do napisania programu użyłam języka Java i biblioteki Swing.</p>
+                <p class="mb-5"><a href="https://github.com/malnel/MetarDownloader">Zobacz kod na Github.</p></p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Powrót</a>
             </div>
           </div>
         </div>
@@ -344,13 +352,15 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Coming soon</h2>
+              <h2 class="text-secondary text-uppercase mb-0">iCards Pro</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/comingSoon.png" alt="">
-              <p class="mb-5">Pracuję nad kolejnymi aplikacjami. Niedługo je pokażę!</p>
+              <img class="img-fluid mb-5" src="img/portfolio/iCardsPro.png" alt="">
+                <p class="mb-5">Program typu flashcards, obsługujący logowanie użytkownika, ręczne dodawanie fiszek lub wczytywanie z pliku oraz tryb nauki i statystyki.</p>
+              <p class="mb-5">Program łączy się z bazą danych poprzez Hibernate. W projekcie wykorzystałam Maven oraz wzorzec MVC. Część graficzną utworzyłam za pomocą JavaFX i SceneBuilder'a.</p>
+              <p class="mb-5"><a href="https://github.com/malnel/iCardsPro">Zobacz kod na Github.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Powrót</a>
             </div>
           </div>
         </div>
@@ -372,14 +382,14 @@
               <p class="mb-5">Pracuję nad kolejnymi aplikacjami. Niedługo je pokażę!</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Powrót</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- Portfolio Modal 4 -->
+    <!--
+    <!-- Portfolio Modal 4 --
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -394,14 +404,14 @@
               <p class="mb-5">Pracuję nad kolejnymi aplikacjami. Niedługo je pokażę!Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Powrót</a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Portfolio Modal 5 -->
+    <!-- Portfolio Modal 5 --
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -416,14 +426,14 @@
               <p class="mb-5">Pracuję nad kolejnymi aplikacjami. Niedługo je pokażę!</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Powrót</a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Portfolio Modal 6 -->
+    <!-- Portfolio Modal 6 --
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -438,13 +448,13 @@
               <p class="mb-5">Pracuję nad kolejnymi aplikacjami. Niedługo je pokażę!</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Powrót</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-
+-->
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
