--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <p class="lead">Jestem studentką medycyny laboratoryjnej. Mieszkam w Warszawie. Obecnie piszę pracę magisterską w dziedzinie genetyki. Programowania uczę się sama oraz na kursie w Reaktorze PWN.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Oprócz medycyny i kodowania, interesuje mnie także lotnictwo. Jestem pilotem szybowcowym i uczniem pilotem samolotowym. Lubię też wędrować po górach i dalekich krajach.</p>
+            <p class="lead">Oprócz medycyny i kodowania, interesuje mnie także lotnictwo, dlatego część swoich aplikacji dedykuję pilotom. Lubię też wędrować po górach i dalekich krajach.</p>
           </div>
         </div>
         <div class="text-center mt-4">
