--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <hr class="star-dark mb-5">
           <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Jestem studentką medycyny laboratoryjnej. Mieszkam w Warszawie. Obecnie piszę pracę magisterską w dziedzinie genetyki. Programowania uczę się sama oraz na kursie w Reaktorze PWN.</p>
+            <p class="lead">Jestem studentką medycyny laboratoryjnej. Mieszkam w Łodzi. Obecnie piszę pracę magisterską w dziedzinie genetyki. Programowania uczę się sama oraz na kursie w Reaktorze PWN.</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead">Oprócz medycyny i kodowania, interesuje mnie także lotnictwo, dlatego część swoich aplikacji dedykuję pilotom. Lubię też wędrować po górach i dalekich krajach.</p>
