replaced cert image with jpg

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1 class="text-uppercase mb-0">Małgorzata Nelson</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Java Developer</h2>
-        <img class="img-fluid mb-5 d-block mx-auto" style="padding-top: 30px" src="img/OCP-JavaSE8.bmp" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" style="padding-top: 30px" src="img/OCP-JavaSE8.jpg" alt="">
       </div>
     </header>
 
