--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/AvWx1a.png" alt="">
+              <img class="img-fluid" src="img/portfolio/AvWx1.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -351,13 +351,13 @@
                     <div class="jumbotron">
                   <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">   
-                      <img class="d-block img-fluid" src="img/portfolio/AvWx1a.png" alt="First slide">
+                      <img class="d-block img-fluid" src="img/portfolio/AvWx1.png" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block img-fluid" src="img/portfolio/AvWx2a.png" alt="Second slide">
+                      <img class="d-block img-fluid" src="img/portfolio/AvWx2.png" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block img-fluid" src="img/portfolio/AvWx3a.png" alt="Third slide">
+                      <img class="d-block img-fluid" src="img/portfolio/AvWx3.png" alt="Third slide">
                     </div>
                   </div>
                         </div>
