--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dev Małgorzata Nelson</title>
+    <title>Dev Małgorzata N</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Małgorzata Nelson</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Małgorzata N</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -59,7 +59,7 @@
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/gosiaBgAppleLittle.png" alt="">
-        <h1 class="text-uppercase mb-0">Małgorzata Nelson</h1>
+        <h1 class="text-uppercase mb-0">Małgorzata N</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Java Developer</h2>
         <img class="img-fluid mb-5 d-block mx-auto" style="padding-top: 30px" src="img/OCP-JavaSE8.jpg" alt="">
@@ -303,7 +303,7 @@
             </div>
             <div class="col-md-6 mb-5 mb-lg-0">
               <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
-              <h4 class="mb-4"><a class="text-white" href="mailto:malgorzata.nelson@gmail.com">malgorzata.nelson@gmail.com</a></h4>
+              <h4 class="mb-4"><a class="text-white" href="mailto:panna.gosha@gmail.com">panna.gosha@gmail.com</a></h4>
               
           </div>
           <div class="col-md-3 mb-5 mb-lg-0">
@@ -317,7 +317,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Małgorzata Nelson 2018</small>
+        <small>Copyright &copy; Małgorzata N 2018</small>
       </div>
     </div>
 
