--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
         <hr class="star-dark mb-5">
           <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">I'm a Java developer from Poland who recently moved to Dallas, TX. I am authorized to work anywhere in the US. I have worked on store automation systems (Oracle Xstore) for 8 months. I have also created a Java bootcamp curriculum and coding tests for a programming school.</p>
+            <p class="lead">About section</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">I'm interested in medicine and aviation, which is why many of my projects are dedicated to pilots. I enjoy hackathons, flying gliders and inline skating. I'm an active member of the local DFW Women Who Code group.</p>
+            <p class="lead">Info.</p>
           </div>
         </div>
         <div class="text-center mt-4">
