Added about section

--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
         <hr class="star-dark mb-5">
           <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">About section</p>
+            <p class="lead">I am a software developer from Poland and I currently live in Texas. I make apps with Java and Python.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Info.</p>
+            <p class="lead">I am interested in medicine, especially genetics. In my free time I hike and rollerblade.</p>
           </div>
         </div>
         <div class="text-center mt-4">
